force/src/objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Practice Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Reason__c</fullName>
        <label>End Date Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of Agreement</fullName>
                </value>
                <value>
                    <fullName>Termination of Agreement</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( OR( Effective_Date__c = TODAY() , AND( Effective_Date__c &lt; TODAY() , OR( End_Date__c &gt;= TODAY() , ISBLANK( End_Date__c ) ) ) ) , &quot;Active&quot;, IF( Effective_Date__c&gt; TODAY() , &apos;Future&apos;, &apos;Inactive&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pathways - Expansion</fullName>
                </value>
                <value>
                    <fullName>Global Strategic Agreement</fullName>
                </value>
                <value>
                    <fullName>Shift Series</fullName>
                </value>
                <value>
                    <fullName>DOLP4</fullName>
                </value>
                <value>
                    <fullName>Optics Agreements</fullName>
                </value>
                <value>
                    <fullName>DOLP3</fullName>
                </value>
                <value>
                    <fullName>DOLP2</fullName>
                </value>
                <value>
                    <fullName>DOLP1</fullName>
                </value>
                <value>
                    <fullName>Pathways - Recruitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Agreement</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VSPR31_EffectiveDateValidation</fullName>
        <active>true</active>
        <description>Effective Date cannot be prior than today’s date</description>
        <errorConditionFormula>AND( NOT($Profile.Name = &quot;System Administrator&quot;) , TODAY()   &gt;  Effective_Date__c,   ISCHANGED(Effective_Date__c) )</errorConditionFormula>
        <errorMessage>Effective Date cannot be prior than today’s date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR31_EndDateReasonRequired</fullName>
        <active>true</active>
        <description>When an End Date is entered, End Date Reason is required.</description>
        <errorConditionFormula>AND(  NOT(ISBLANK( End_Date__c ) ),   ISBLANK( TEXT( End_Date_Reason__c ) )  , NOT($Profile.Name = &quot;System Administrator&quot;) )</errorConditionFormula>
        <errorMessage>When an End Date is entered, End Date Reason is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR31_EndDateValidation</fullName>
        <active>true</active>
        <description>End Date can only be a future date</description>
        <errorConditionFormula>AND(NOT($Profile.Name = &quot;System Administrator&quot;), NOT( ISBLANK( End_Date__c ) ),   OR(End_Date__c    &lt;=   Effective_Date__c,  TODAY()  &gt;=  End_Date__c   ), NOT(ISCHANGED( Type__c ) ) )</errorConditionFormula>
        <errorMessage>End Date can only be a future date</errorMessage>
    </validationRules>
</CustomObject>